Updated CDK from 2.6 to 2.7.1; because Google Guava was omitted as dependency in this release, some adjustments had to be done in EFGF to remove Guava there as well; analogous adjustments in Scaffold Generator still pending (WIP);